[package]
name    = "l2portal"
version = "0.2.1"
edition = "2024"
description = "Lightweight L2 UDP tunnel bridge for Windows"
authors = []

[[bin]]
name = "l2portal"
path = "src/main.rs"

[dependencies]
pcap            = "2"
tap-windows     = "0.1"
tokio           = { version = "1", features = ["full"] }
clap            = { version = "4", features = ["derive"] }
anyhow          = "1"
log             = "0.4"
env_logger      = "0.11"
unicode-width   = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = 3
strip = true
